--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+/src/fire.js
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+/db.json
 
 # testing
 /coverage
